--- a/support/api_generation/custom_templates/client.mustache
+++ b/support/api_generation/custom_templates/client.mustache
@@ -9,7 +9,7 @@ from {{packageName}}.api.{{classVarName}} import {{classname}}
 {{/apiInfo}}
 
 
-class ApiClient:
+class DefectDojo:
     """A custom wrapper around the generated API client"""
     def __init__(self, base_url: str, token: str):
         self.config = Configuration(host=base_url, api_key={'tokenAuth': token}, api_key_prefix={'tokenAuth': 'Token'})
