--- a/support/api_generation/custom_templates/client.mustache
+++ b/support/api_generation/custom_templates/client.mustache
@@ -1,5 +1,5 @@
 # custom-templates/my_client.mustache
-"""My custom client wrapper"""
+"""DefectDojo Client"""
 from {{packageName}}.api_client import ApiClient as _ApiClient
 from {{packageName}}.configuration import Configuration
 {{#apiInfo}}
