--- a/support/api_generation/custom_templates/__init__package.mustache
+++ b/support/api_generation/custom_templates/__init__package.mustache
@@ -5,6 +5,7 @@
 {{>partial_header}}
 
 __version__ = "{{packageVersion}}"
+{{#version}}__openapi_version__ = "{{{.}}}"{{/version}}
 
 import lazy_import
 from typing import TYPE_CHECKING
