--- a/support/api_generation/custom_templates/__init__package.mustache
+++ b/support/api_generation/custom_templates/__init__package.mustache
@@ -13,6 +13,7 @@ __version__ = "{{packageVersion}}"
 # import ApiClient
 from {{packageName}}.api_response import ApiResponse
 from {{packageName}}.api_client import ApiClient
+from {{packageName}}.client import DefectDojo
 from {{packageName}}.configuration import Configuration
 from {{packageName}}.exceptions import OpenApiException
 from {{packageName}}.exceptions import ApiTypeError
