--- a/support/api_generation/custom_templates/api_client.mustache
+++ b/support/api_generation/custom_templates/api_client.mustache
@@ -83,7 +83,7 @@ class ApiClient:
             self.default_headers[header_name] = header_value
         self.cookie = cookie
         # Set default User-Agent.
-        self.user_agent = '{{{httpUserAgent}}}{{^httpUserAgent}}OpenAPI-Generator/{{{packageVersion}}}/python{{/httpUserAgent}}'
+        self.user_agent = '{{{httpUserAgent}}}{{^httpUserAgent}}defectdojo-api-generated/{{{packageVersion}}}/python{{/httpUserAgent}}'
         self.client_side_validation = configuration.client_side_validation
 
 {{#asyncio}}
