--- a/support/api_generation/custom_templates/__init__package.mustache
+++ b/support/api_generation/custom_templates/__init__package.mustache
@@ -7,9 +7,16 @@
 __version__ = "{{packageVersion}}"
 {{#version}}__openapi_version__ = "{{{.}}}"{{/version}}
 
+import lazy_import
+from typing import TYPE_CHECKING
+
 # import apis into sdk package
-{{#apiInfo}}{{#apis}}from {{apiPackage}}.{{classFilename}} import {{classname}}
-{{/apis}}{{/apiInfo}}
+if TYPE_CHECKING:
+    {{#apiInfo}}{{#apis}}from {{apiPackage}}.{{classFilename}} import {{classname}}
+    {{/apis}}{{/apiInfo}}
+else:
+    {{#apiInfo}}{{#apis}}{{classname}} = lazy_import.lazy_class('{{apiPackage}}.{{classFilename}}.{{classname}}')
+    {{/apis}}{{/apiInfo}}
 # import ApiClient
 from {{packageName}}.api_response import ApiResponse
 from {{packageName}}.api_client import ApiClient
@@ -26,11 +33,18 @@ from {{packageName}}.signing import HttpSigningConfiguration
 {{/hasHttpSignatureMethods}}
 
 # import models into sdk package
-{{#models}}
-{{#model}}
-from {{modelPackage}}.{{classFilename}} import {{classname}}
-{{/model}}
-{{/models}}
+if TYPE_CHECKING:
+    {{#models}}
+    {{#model}}
+    from {{modelPackage}}.{{classFilename}} import {{classname}}
+    {{/model}}
+    {{/models}}
+else:
+    {{#models}}
+    {{#model}}
+    {{classname}} = lazy_import.lazy_class('{{modelPackage}}.{{classFilename}}.{{classname}}')
+    {{/model}}
+    {{/models}}
 {{#recursionLimit}}
 
 __import__('sys').setrecursionlimit({{{.}}})
