--- a/support/api_generation/custom_templates/pyproject.mustache
+++ b/support/api_generation/custom_templates/pyproject.mustache
@@ -27,6 +27,7 @@ pycryptodome = ">= 3.9.0"
 {{/hasHttpSignatureMethods}}
 pydantic = ">= 2"
 typing-extensions = ">= 4.7.1"
+lazy_import = ">= 0.2.2"
 
 [tool.poetry.dev-dependencies]
 pytest = ">= 7.2.1"
