--- a/support/api_generation/custom_templates/client.mustache
+++ b/support/api_generation/custom_templates/client.mustache
@@ -1,18 +1,8 @@
 # custom-templates/my_client.mustache
 """DefectDojo Client"""
 
-import lazy_import
-from typing import TYPE_CHECKING
-
 from {{packageName}}.api_client import ApiClient as _ApiClient
 from {{packageName}}.configuration import Configuration
-
-if TYPE_CHECKING:
-    {{#apiInfo}}{{#apis}}from {{apiPackage}}.{{classFilename}} import {{classname}}
-    {{/apis}}{{/apiInfo}}
-else:
-    {{#apiInfo}}{{#apis}}{{classname}} = lazy_import.lazy_class('{{apiPackage}}.{{classFilename}}.{{classname}}')
-    {{/apis}}{{/apiInfo}}
 
 from urllib.request import proxy_bypass, getproxies
 from urllib.parse import urlparse
@@ -54,8 +44,13 @@ class DefectDojo:
                 self.config.proxy = getproxies().get(scheme)
 
         self.api_client = _ApiClient(configuration=self.config)
-        {{#apiInfo}}
-        {{#apis}}
-        self.{{classVarName}} = {{classname}}(self.api_client)
-        {{/apis}}
-        {{/apiInfo}}
+    
+    {{#apiInfo}}
+    {{#apis}}
+    @property
+    def {{classVarName}}(self):
+        from {{packageName}}.api.{{classVarName}} import {{classname}}
+
+        return {{classname}}(self.api_client)
+    {{/apis}}
+    {{/apiInfo}}
