--- a/support/api_generation/custom_templates/model_anyof.mustache
+++ b/support/api_generation/custom_templates/model_anyof.mustache
@@ -33,6 +33,7 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
     model_config = {
         "validate_assignment": True,
         "protected_namespaces": (),
+        "defer_build": True,
     }
 {{#discriminator}}
 
