--- a/support/api_generation/custom_templates/model_generic.mustache
+++ b/support/api_generation/custom_templates/model_generic.mustache
@@ -97,6 +97,7 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
         populate_by_name=True,
         validate_assignment=True,
         protected_namespaces=(),
+        defer_build=True,
     )
 
 
