--- a/support/api_generation/custom_templates/model_oneof.mustache
+++ b/support/api_generation/custom_templates/model_oneof.mustache
@@ -27,6 +27,7 @@ class {{classname}}({{#parent}}{{{.}}}{{/parent}}{{^parent}}BaseModel{{/parent}}
     model_config = ConfigDict(
         validate_assignment=True,
         protected_namespaces=(),
+        defer_build=True,
     )
 
 {{#discriminator}}
