--- a/support/api_generation/custom_templates/api.mustache
+++ b/support/api_generation/custom_templates/api.mustache
@@ -2,7 +2,7 @@
 
 {{>partial_header}}
 import warnings
-from pydantic import validate_call, Field, StrictFloat, StrictStr, StrictInt
+from pydantic import Field, StrictFloat, StrictStr, StrictInt
 from typing import Any, Dict, List, Optional, Tuple, Union
 from typing_extensions import Annotated
 
@@ -30,7 +30,6 @@ class {{classname}}:
 {{#operation}}
 
 
-    @validate_call
     {{#asyncio}}async {{/asyncio}}def {{operationId}}{{>partial_api_args}} -> {{{returnType}}}{{^returnType}}None{{/returnType}}:
 {{>partial_api}}
         response_data = {{#asyncio}}await {{/asyncio}}self.api_client.call_api(
@@ -44,7 +43,6 @@ class {{classname}}:
         ).data
 
 
-    @validate_call
     {{#asyncio}}async {{/asyncio}}def {{operationId}}_with_http_info{{>partial_api_args}} -> ApiResponse[{{{returnType}}}{{^returnType}}None{{/returnType}}]:
 {{>partial_api}}
         response_data = {{#asyncio}}await {{/asyncio}}self.api_client.call_api(
@@ -58,7 +56,6 @@ class {{classname}}:
         )
 
 
-    @validate_call
     {{#asyncio}}async {{/asyncio}}def {{operationId}}_without_preload_content{{>partial_api_args}} -> RESTResponseType:
 {{>partial_api}}
         response_data = {{#asyncio}}await {{/asyncio}}self.api_client.call_api(
